[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/unit/objecttypeunit.gd" type="Script" id=2]
[ext_resource path="res://assets/unit/unit_selected.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/unit/unitsoldier.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/strenght = 0.0

[sub_resource type="SpatialMaterial" id=13]
resource_local_to_scene = true
next_pass = SubResource( 14 )
albedo_color = Color( 0.0941176, 0.235294, 0.886275, 1 )

[sub_resource type="CapsuleMesh" id=12]
resource_local_to_scene = true
material = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.141176, 0.572549, 0.639216, 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.772549, 0.584314, 0.360784, 1 )

[sub_resource type="CylinderMesh" id=8]
material = SubResource( 7 )

[sub_resource type="ConvexPolygonShape" id=15]
points = PoolVector3Array( -0.972729, 0.170391, -0.632762, 0.991375, 0.00714278, 0.594536, 0.990984, 0.0890012, 0.553274, 0.496551, -0.441258, -1.24375, -0.317763, -0.885919, 0.832213, -0.0747357, 0.947977, 0.797463, 0.25284, 0.825812, -1.0032, -0.526953, 0.130336, 1.33554, -0.440687, -0.603552, -1.16064, 0.496608, -0.849134, 0.672975, 0.378044, -0.0339178, 1.42212, -0.884938, -0.438707, 0.628485, -0.480814, 0.617232, -1.11842, -0.803433, 0.574508, 0.628223, 0.856435, 0.492317, -0.626858, -0.11591, -0.976507, -0.67622, 0.859536, -0.479803, -0.669773, 0.572962, 0.775053, 0.747599, 0.172267, 0.172267, -1.46605, -0.479804, 0.859538, -0.669774, -0.721015, -0.680519, -0.586622, -0.156757, -0.525388, 1.33211, -0.648419, -0.115498, -1.24963, -0.15707, 0.581984, 1.29355, 0.866929, 0.170866, -0.962149, 0.332014, 0.94129, -0.507643, 0.413277, -0.845586, -0.832511, 0.736328, -0.560023, 0.871037, -0.97477, 0.129786, 0.675025, 0.700886, 0.25188, 1.16319, -0.930705, -0.318757, -0.672787, -0.725725, -0.3591, 1.07922, -0.156757, -0.525388, -1.33211, 0.29257, -0.686201, 1.16252, 0.129786, -0.97477, 0.675025, 0.33379, 0.61975, 1.20479, -0.479803, 0.859536, 0.669773, -0.115565, 0.988039, -0.551618, 0.990148, -0.0336554, -0.593795, -0.849191, 0.496531, -0.672869, -0.562995, -0.807204, 0.672059, 0.85642, 0.492308, 0.626846, -0.683166, 0.534891, 0.994835, 0.577133, 0.332796, -1.24188, -0.198218, 0.335642, -1.41718, -0.116847, 0.213598, 1.46606, 0.654399, 0.735187, -0.667508, 0.742233, -0.237759, 1.12309, 0.899981, -0.398467, 0.669636, 0.253122, 0.949838, 0.676403, 0.453569, -0.885709, -0.54779, -0.117117, -0.199568, -1.46926, -0.768518, 0.129545, -1.12264, 0.12956, -0.768424, -1.12278, -0.43878, -0.884893, -0.628588, -0.197532, -0.975449, 0.552572, -0.115807, 0.826041, -1.04422, 0.171135, 0.58102, -1.29182, 0.742227, -0.237757, -1.12308, -0.282246, -0.240683, 1.42608, -0.852838, 0.129915, 1.00335, -0.976555, -0.115531, 0.676252, 0.335646, -0.19822, -1.41719, 0.2128, -0.321832, 1.41923 )

[node name="UnitRoot" type="KinematicBody"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 4 )
movement_speed = 25.0

[node name="MeshBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.54, 0 )
mesh = SubResource( 12 )

[node name="MeshHair" type="MeshInstance" parent="MeshBody"]
transform = Transform( 0.1, 0, 0, 0, 0.1, -0.433013, 0, 0.173205, 0.25, 0, 0.308046, 1.27351 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")

[node name="MeshEyes" type="MeshInstance" parent="MeshBody"]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, 0, -0.9, 0.8 )
mesh = SubResource( 6 )
skeleton = NodePath("../..")

[node name="MeshArmLeft" type="MeshInstance" parent="MeshBody"]
transform = Transform( 0.173332, 0, 0, 0, 0.424264, -0.141421, 0, 0.424264, 0.141421, 1.10399, -0.367833, 0.00750935 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")

[node name="MeshArmRight" type="MeshInstance" parent="MeshBody"]
transform = Transform( 0.173332, 0, 0, 0, 0.563816, -0.068404, 0, 0.205212, 0.187939, -1.14967, -0.367833, 0.121565 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.54, 0 )
shape = SubResource( 15 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
unique_name_in_owner = true
avoidance_enabled = true

[node name="NavigationObstacle" type="NavigationObstacle" parent="."]

[node name="ObjectType" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="_UnitRoot" type="Spatial" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.1, -2.66454e-15 )
visible = false
layers = 2
axis = 1
texture = ExtResource( 1 )

[connection signal="navigation_finished" from="NavigationAgent" to="." method="_on_NavigationAgent_navigation_finished"]
[connection signal="path_changed" from="NavigationAgent" to="." method="_on_NavigationAgent_path_changed"]
[connection signal="target_reached" from="NavigationAgent" to="." method="_on_NavigationAgent_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
